--- a/jsframework/static/templates/userProfile.html
+++ b/jsframework/static/templates/userProfile.html
@@ -19,59 +19,136 @@
 		  	</div>
 		</div>
 		<div class="form-group">
+			<label class="col-sm-2 control-label" id="basic-addon1">Social links</label>
+			<div class="col-sm-10">
+				<a ui-sref="/fb">Link Facebook</a>
+			</div>
+		</div>
+		<div class="form-group">
 		    <div class="col-sm-offset-2 col-sm-10">
 		      <button type="submit" class="btn btn-default">Update fields</button>
 		    </div>
 		  </div>
 	</form>
-	<div class="panel panel-default" ng-show="user.is_staff">
-		<div class="panel-heading">Posts</div>
-		<table class="table"> 
-			<thead> 
-				<tr> 
-					<th>Title</th> 
-					<th>Author</th>
-					<th>Content</th>
-					<th>Actions</th> 
-				</tr> 
-			</thead> 
-			<tbody ng-repeat="post in posts"> 
-				<tr> 
-					<td>{{post.title}}</td> 
-					<td><a ui-sref="user({id:{{post.author_id}}})">{{post.author}}</a></td> 
-					<td>{{post.content}}</td> 
-					<td>
-						<a ui-sref="singlepost({id:{{post.id}},action:'view'})" class="glyphicon glyphicon-search"></a>
-						<a ui-sref="singlepost({id:{{post.id}},action:'delete'})" class="glyphicon glyphicon-trash"></a>
-					</td> 
-				</tr> 
-			</tbody>		
-		</table>
+</div>
+<div class="alert alert-success" ng-show="state.action_state == 'deleted'" role="alert">User deleted</div>
+<div class="panel panel-default" ng-show="user.is_staff">
+	<div class="panel-heading">Posts</div>
+	<div class="panel-body">
+	    <form class="form-horizontal" ng-submit="addPost()" name="postForm">
+			<div class="page-header">
+			  <h2>Add post</h2>
+			  <div class="alert alert-success" style="display:none;" role="alert">Post published!</div>
+			</div>
+			<div class="form-group">
+				<label for="inputTitle" class="col-sm-2 control-label">Title</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" ng-model="newPost.title" placeholder="Title" id="inputTitle" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputContent" id="content" class="col-sm-2 control-label">Content</label>
+				<div class="col-sm-10">
+					<text-angular name="content" ng-model="newPost.content"></text-angular>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputContent" id="author" class="col-sm-2 control-label">Author</label>
+				<div class="col-sm-10">
+					<select class="form-control" ng-model="newPost.author" name="author" required>
+					  <option ng-repeat="user in all_users" value="{{user.id}}">{{user.username}}</option>
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="submit" class="btn btn-default">Publish</button>
+				</div>
+			</div>
+		</form>
 	</div>
-	<div class="panel panel-default" ng-show="user.is_staff">
-		<div class="panel-heading">Users</div>
-		<table class="table"> 
-			<thead> 
-				<tr> 
-					<th>Username</th> 
-					<th>Posts</th>
-					<th>Actions</th>
-				</tr> 
-			</thead> 
-			<tbody ng-repeat="user in all_users"> 
-				<tr> 
-					<td><a ui-sref="user({id:{{user.id}}})">{{user.username}}</a></td> 
-					<td>
-						<ul ng-repeat="user_post in user.posts">
-							<li><a ui-sref="singlepost({id:{{user_post.id}}})">{{user_post.title}}</a></li>
-						</ul>
-					</td> 
-					<td>
-						<a ui-sref="user({id:{{user.id}}})" class="glyphicon glyphicon-search"></a>
-						<a ui-sref="user({id:{{user.id}},action:'delete'})" class="glyphicon glyphicon-trash"></a>
-					</td>
-				</tr> 
-			</tbody>		
-		</table>
+	<table class="table posts"> 
+		<thead> 
+			<tr> 
+				<th>Title</th> 
+				<th>Author</th>
+				<th>Content</th>
+				<th>Actions</th> 
+			</tr> 
+		</thead> 
+		<tbody> 
+			<tr ng-repeat="post in posts"> 
+				<td>{{post.title}}</td> 
+				<td><a ui-sref="user({id:{{post.author}}})">{{post.author_name}}</a></td> 
+				<td>{{post.content | removeHTMLTags}}</td> 
+				<td>
+					<a ui-sref="singlepost({id:{{post.id}},action:'view'})" class="glyphicon glyphicon-search"></a>
+					<a ui-sref="singlepost({id:{{post.id}},action:'delete'})" class="glyphicon glyphicon-trash"></a>
+				</td> 
+			</tr> 
+		</tbody>		
+	</table>
+</div>
+<div class="panel panel-default" ng-show="user.is_staff">
+	<div class="panel-heading">Users</div>
+	<div class="panel-body">
+		<form class="form-horizontal" ng-submit="addUser()" name="userForm">
+			<div class="page-header">
+			  <h2>Add user</h2>
+			  <div class="alert alert-success" style="display:none;" role="alert">User added!</div>
+			</div>
+			<div class="form-group">
+				<label for="inputUsername" class="col-sm-2 control-label">Username</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" ng-model="newUser.username" placeholder="Username" id="inputUsername" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail" class="col-sm-2 control-label">Email</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" ng-model="newUser.email" placeholder="Title" id="inputEmail" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputFname" class="col-sm-2 control-label">First name</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" ng-model="newUser.fname" placeholder="Title" id="inputFname" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputLname" class="col-sm-2 control-label">Last name</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" ng-model="newUser.lname" placeholder="Title" id="inputLname" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="submit" class="btn btn-default">Add</button>
+				</div>
+			</div>
+		</form>
 	</div>
+	<table class="table users"> 
+		<thead> 
+			<tr> 
+				<th>Username</th> 
+				<th>Posts</th>
+				<th>Actions</th>
+			</tr> 
+		</thead> 
+		<tbody ng-repeat="user in all_users"> 
+			<tr> 
+				<td><a ui-sref="user({id:{{user.id}}})">{{user.username}}</a></td> 
+				<td>
+					<ul ng-repeat="user_post in user.posts">
+						<li><a ui-sref="singlepost({id:{{user_post.id}}})">{{user_post.title}}</a></li>
+					</ul>
+				</td> 
+				<td>
+					<a ui-sref="user({id:{{user.id}}})" class="glyphicon glyphicon-search"></a>
+					<a ui-sref="user({id:{{user.id}},action:'delete'})" class="glyphicon glyphicon-trash"></a>
+				</td>
+			</tr> 
+		</tbody>		
+	</table>
 </div>
